# gameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic.map  gameOfLife.desktop
include/: Board.hpp  Error.hpp  Game.hpp  HelpButton.hpp  StartupAnimation.hpp  Toolbar.hpp
maps/: bee.map  blank.map  chien.map  default.map  one.map  oscillator.map  special.map  tom.map
src/: Board.cpp  Error.cpp  Game.cpp  HelpButton.cpp  StartupAnimation.cpp  Toolbar.cpp  main.cpp
